<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <EditText
        android:id="@+id/input_title_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:textSize="12sp"
        android:freezesText="true"
        android:hint="@string/title"
        />

    <EditText
        android:id="@+id/input_message_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:textSize="12sp"
        android:freezesText="true"
        android:hint="@string/yourMessage"
        />

<CheckBox
    android:id="@+id/only_send_title"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:text="@string/onlySendTitle"/>

    <Button
        style="@style/ButtonStyle"
        android:text="@string/sendEmail"
        android:onClick="sendEmail"/>

    <Button
        android:id="@+id/launch_activity"
        style="@style/ButtonStyle"
        android:text="@string/launch_activity" />

    <Button
        android:id="@+id/launch_camera"
        style="@style/ButtonStyle"
        android:text="@string/launchCamera"
      />

    </LinearLayout>

</ScrollView>